# nova

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  nova.py  output  output.asm  pyproject.toml  string-literals.nv  test-nova.py  tox.ini
.github/workflows/: github-actions.yml  nova-github-actions.yml  nova-lang.yml
examples/: hello-world.nv  rule110  rule110.nv  rule184  rule184.nv  rule30  rule30.nv  rule90  rule90.nv  simple.nv
nova/: __main__.py  builtins.py  compiler.py  config.py  dataclasses.py  helpers.py  lexer.py  old.py  parser.py  simulator.py  tokenizer.py
nova/unit-tests/: builtins_test.py  compiler_test.py  helpers_test.py  (+10 more)
tests/: arithmetic-minus.nv  arithmetic-multiply.nv  arithmetic-plus.nv  basic-arithmetics  basic-arithmetics.nv  basic-operators  basic-operators.nv  bitwise-operations  bitwise-operations.nv  bitwise-operator-and  bitwise-operator-and.nv  bitwise-operator-or  bitwise-operator-or.nv  bitwise-operator-shift-left  bitwise-operator-shift-left.nv  bitwise-operator-shift-right  bitwise-operator-shift-right.nv  buffer-store-single-bytes  buffer-store-single-bytes.nv  buffer-string-literal  buffer-string-literal.nv  conditional-if-else  conditional-if-else.nv  conditional-if.nv  conditional-nested-if-else.nv  conditional-nested-if-while-loop  conditional-nested-if-while-loop.nv  conditional-nested-while-if-loop.nv  conditional-nested-while-loop.nv  conditional-while-loop.nv  hello-world  hello-world.nv  if-else  if-else-exit  if-else-exit.nv  if-else.nv  local-constant.nv  local-macro.nv  local-memory  local-memory.nv  (+31 more)
